--- a/teetawat_shark_cup_by_ctrl_g.html
+++ b/teetawat_shark_cup_by_ctrl_g.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R3K - Pisitpedia</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/sharkcup.css">
     <link rel="shortcut icon" type="webicon" href="pic/r3k icon.png">
 
 </head>
@@ -24,15 +25,21 @@
 </nav>
 
 <body>
-    <div class="container"></div>
-        <style>
-            .container {
-            background-image: url('pic/backgrounds.jpg');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-        }
-        </style>
+    <div class="shark-container">
+        <div class="shark-content">
+            <img src="pic/teeta_shark_cup.png" class="shark-logo">
+            <h1>
+                TEETAWAT SHARK CUP BY CTRL-G
+            </h1>
+            <p>
+                Season 3 Coming Soon
+            </p>
+            <h2>ติดตามข่าวสารได้ที่</h2>
+            <div class="content-button">
+                <a href="https://www.twitch.tv/teetawatv3" target="_blank"><img src="pic/twitch-icon.png" class="social-icon">/TEETAWATV3</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 <footer>
