--- a/r3k.html
+++ b/r3k.html
@@ -44,6 +44,7 @@
 
     <ul class="menu">
         <li><a href="r3k.html">R3K</a></li>
+        <li><a href="jing-jok-jing-jang.html">Team</a></li>
         <li><a href="teetawat_shark_cup_by_ctrl_g.html">Tournament</a></li>
     </ul>
 </nav>
@@ -91,8 +92,8 @@
                         <th>2024-03-21</th>
                         <th>13th-16th</th>
                         <th>SSS-Tier</th>
-                        <th><a href="https://challonge.com/th/c63xrlr6" target="_blank" class="tournament-link"><img src="pic/teeta_shark_cup.png" class="team-logo">Teetawat Chat Cup Season 1</a></th>
-                        <th><a href="https://www.twitch.tv/pisitz" target="_blank"><img src="pic/jjjj-logo.png" alt="Jing Jok Jing Jang จิ้งจกจริงจัง" title="Jing Jok Jing Jang จิ้งจกจริงจัง" class="team-logo"></a></th>
+                        <th><a href="https://challonge.com/th/c63xrlr6" target="_blank" class="tournament-link"><img src="pic/teeta-chat-cup-1.png" class="team-logo">Teetawat Chat Cup Season 1</a></th>
+                        <th><a href="jing-jok-jing-jang.html" target="_blank"><img src="pic/jjjj-logo.png" alt="Jing Jok Jing Jang จิ้งจกจริงจัง" title="Jing Jok Jing Jang จิ้งจกจริงจัง" class="team-logo"></a></th>
                         <th>0 : 2</th>
                         <th><img src="pic/overwatch-logo.png"class="team-logo"></th>
                         <th>$138.70</th>
@@ -357,7 +358,6 @@
 </body>
 
 <footer>
-    <p>PisitPedia made for R3K ❤️</p>
     <p>© 2024 Pisit Kongnarong</p>
 </footer>
 
