--- a/teetawat_shark_cup_by_ctrl_g.html
+++ b/teetawat_shark_cup_by_ctrl_g.html
@@ -20,6 +20,7 @@
 
     <ul class="menu">
         <li><a href="r3k.html">R3K</a></li>
+        <li><a href="jing-jok-jing-jang.html">Team</a></li>
         <li><a href="teetawat_shark_cup_by_ctrl_g.html">Tournament</a></li>
     </ul>
 </nav>
@@ -43,7 +44,6 @@
 </body>
 
 <footer>
-    <p>PisitPedia made for R3K ❤️</p>
     <p>© 2024 Pisit Kongnarong</p>
 </footer>
 
