--- a/jing-jok-jing-jang.html
+++ b/jing-jok-jing-jang.html
@@ -51,6 +51,7 @@
 
 <body>
     <main id="main-content-column" class="main-content">
+
         <section class="body-content">
 
             <!--ซ้ายจอ-->
@@ -279,6 +280,9 @@
 
             <!--ขวาจอ-->
             <div class="content">
+                <div>
+                    <a href="https://www.facebook.com/THBOTTOPUP" target="_blank"><img src="pic/ads-banner.png" title="THBOT Top-UP"></a>
+                </div>
                 <h2>Jing Jok Spa</h2>
                 <img src="pic/MSxJJJJ-White.png" alt="MS x JJJJ Logo">
                 <h2>Team Information</h2>
