--- a/jing-jok-jing-jang.html
+++ b/jing-jok-jing-jang.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6552505597075020"
+     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-6552505597075020">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>มูจิสปา x จิ้งจกจริงจัง - PisitPedia</title>
+    <title>จิ้งจกสปา - PisitPedia</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" type="webicon" href="pic/r3k icon.png">
     <script src="js/script.js"></script>
