add framework fontawnsome

--- a/jing-jok-jing-jang.html
+++ b/jing-jok-jing-jang.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="shortcut icon" type="webicon" href="pic/r3k icon.webp">
     <script src="js/script.js"></script>
+    <script src="https://kit.fontawesome.com/368373bfeb.js" crossorigin="anonymous"></script>
 </head>
 
 <nav>
@@ -285,8 +286,8 @@
                 </div>
                 <h2>Links</h2>
                 <div class="social-icon">
-                    <a href="https://discord.gg/rANwe97Kma" target="_blank" rel="noopener"><img src="pic/discord icon.webp" class="social-icon"></a>
-                    <a href="https://www.twitch.tv/pisitz" target="_blank" rel="noopener"><img src="pic/twitch-icon.webp" class="social-icon"></a>
+                    <a href="https://discord.gg/rANwe97Kma" target="_blank" rel="noopener"><i class="fa-brands fa-discord"></i></a>
+                    <a href="https://www.twitch.tv/pisitz" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a>
                 </div>
                 <h2>History</h2>
                 <div class="history">
