--- a/r3k.html
+++ b/r3k.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="shortcut icon" type="webicon" href="pic/r3k icon.webp">
     <script src="js/script.js"></script>
+    <script src="https://kit.fontawesome.com/368373bfeb.js" crossorigin="anonymous"></script>
+
 </head>
 
 <nav>
@@ -258,19 +260,11 @@
             </div>
             <h2>Links</h2>
             <div class="social-icon">
-                <a href="https://discord.com/invite/Edc5KGchem" target="_blank" rel="noopener"><img src="pic/discord icon.webp" class="social-icon"></a>
-                <a href="https://www.instagram.com/leeys5116/" target="_blank" rel="noopener"><img src="pic/instagram-socialmedia.webp" class="social-icon"></a>
-                <a href="https://x.com/IssacLee5116" target="_blank" rel="noopener"><img src="pic/x-socialmedia.webp" class="social-icon"></a>
-                <a href="https://www.twitch.tv/r3k_hk" target="_blank" rel="noopener"><img src="pic/twitch-icon.webp" class="social-icon"></a>
-                <a href="https://www.youtube.com/channel/UCGhRgZZFR34AEyxYa6d-Mpg" target="_blank" rel="noopener"><img src="pic/youtube-icon.webp" class="social-icon"></a>
-            </div>
-            <div class="player-information">
-                <div class="info-box">                 
-                    <p>World Cup 2023</p>
-                </div>
-                <div class="info-box-right">
-                    <p><img alt="hongkong-flag" src="pic/hongkong-flag.webp"></p>
-                </div>
+                <a href="https://discord.com/invite/Edc5KGchem" target="_blank" rel="noopener"><i class="fa-brands fa-discord"></i></a>
+                <a href="https://www.instagram.com/leeys5116/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://x.com/IssacLee5116" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.twitch.tv/r3k_hk" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a>
+                <a href="https://www.youtube.com/channel/UCGhRgZZFR34AEyxYa6d-Mpg" target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a>
             </div>
             <h2>History</h2>
             <div class="history">
