--- a/Teetawat_Shark_Cup.html
+++ b/Teetawat_Shark_Cup.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6552505597075020"crossorigin="anonymous"></script>
-    <meta name="google-adsense-account" content="ca-pub-6552505597075020">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R3K - PisitPedia</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="shortcut icon" type="webicon" href="pic/r3k icon.webp">
-    <script src="js/script.js"></script>
-</head>
+    <head>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6552505597075020"
+         crossorigin="anonymous"></script>
+        <meta name="google-adsense-account" content="ca-pub-6552505597075020">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Teetawat Shark Cup - PisitPedia</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/sharkcup.css">
+        <link rel="shortcut icon" type="webicon" href="pic/r3k icon.webp">
+        <script src="js/script.js"></script>
+    </head>
 
 <nav>
     <div class="logo">
@@ -28,15 +29,21 @@
 </nav>
 
 <body>
-    <div class="container"></div>
-        <style>
-            .container {
-            background-image: url('pic/backgrounds.webp');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-        }
-        </style>
+    <div class="shark-container">
+        <div class="shark-content">
+            <img src="pic/teeta_shark_cup.webp" class="shark-logo">
+            <h1>
+                TEETAWAT SHARK CUP BY CTRL-G
+            </h1>
+            <p>
+                Season 3 Coming Soon
+            </p>
+            <h2>ติดตามข่าวสารได้ที่</h2>
+            <div class="content-button">
+                <a href="https://www.twitch.tv/teetawatv3" target="_blank"><img src="pic/twitch-icon.webp" class="social-icon">/TEETAWATV3</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 <footer>
