--- a/Teetawat_Shark_Cup.html
+++ b/Teetawat_Shark_Cup.html
@@ -9,11 +9,15 @@
         <title>Teetawat Shark Cup - PisitPedia</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/sharkcup.css">
+        <link rel="stylesheet" href="css/scrollbar.css">
         <link rel="shortcut icon" type="webicon" href="pic/r3k icon.webp">
         <script src="js/script.js"></script>
+        <script src="js/shark.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
 
-<nav>
+<nav id="navbar" class="hidden">
     <div class="logo">
         <a href="index.html" class="logo">
             <img src="pic/r3k icon.webp" alt="logo">
@@ -22,6 +26,7 @@
     </div>
 
     <ul class="menu">
+        <li><a href="Player.html">Player</a></li>
         <li><a href="Jing_Jok_Spa.html">Team</a></li>
         <li><a href="Teetawat_Shark_Cup.html">Tournament</a></li>
     </ul>
@@ -34,12 +39,24 @@
             <h1>
                 TEETAWAT SHARK CUP BY CTRL-G
             </h1>
-            <p>
-                Season 3 Coming Soon
-            </p>
+            <h3>
+                Season 3
+            </h3>
+            <div class="content-button">
+                <a href="#">Coming Soon !</a>
+            </div>
             <h2>ติดตามข่าวสารได้ที่</h2>
             <div class="content-button">
-                <a href="https://www.twitch.tv/teetawatv3" target="_blank"><img src="pic/twitch-icon.webp" class="social-icon">/TEETAWATV3</a>
+                <div><a href="https://www.twitch.tv/teetawatv3" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M391.2 103.5H352.5v109.7h38.6zM285 103H246.4V212.8H285zM120.8 0 24.3 91.4V420.6H140.1V512l96.5-91.4h77.3L487.7 256V0zM449.1 237.8l-77.2 73.1H294.6l-67.6 64v-64H140.1V36.6H449.1z"/></svg>
+                    <p>TEETAWATV3</p></a>
+                </div>
+                <div>
+                    <a href="#" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
+                    <p>TEETAWATV3</p>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
