--- a/Players.html
+++ b/Players.html
@@ -5,7 +5,7 @@
     <meta name="google-adsense-account" content="ca-pub-6552505597075020">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R3K - PisitPedia</title>
+    <title>Players - PisitPedia</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/scrollbar.css">
@@ -23,7 +23,7 @@
     </div>
 
     <ul class="menu">
-        <li><a href="Player.html">Player</a></li>
+        <li><a href="Players.html">Players</a></li>
         <li><a href="Jing_Jok_Spa.html">Team</a></li>
         <li><a href="Teetawat_Shark_Cup.html">Tournament</a></li>
     </ul>
