--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <ul class="menu">
-        <li><a href="Player.html">Player</a></li>
+        <li><a href="Players.html">Players</a></li>
         <li><a href="Jing_Jok_Spa.html">Team</a></li>
         <li><a href="Teetawat_Shark_Cup.html">Tournament</a></li>
     </ul>
