--- a/Players.html
+++ b/Players.html
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th><a href="R3K.html">R3K</a></th>
+                            <th><a href="r3k.html">R3K</a></th>
                             <th><a href="https://liquipedia.net/overwatch/Category:Hong_Kong" target="_blank">Hong Kong</a></th>
                             <th>
                                 <a href="https://www.instagram.com/leeys5116/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
