update link discord ร้านไอเจฟ

--- a/Jing_Jok_Spa.html
+++ b/Jing_Jok_Spa.html
@@ -274,7 +274,10 @@
             <div class="content">
 
                 <!--Ads start-->
+                <a href="https://discord.gg/UNj4JeYrya" target="_blank">
                 <img id="openPopupBtn" src="pic/ads-banner.webp" title="THBOT Top-UP">
+                </a>
+                <!--popup
                 <div class="popup" id="popup">
                     <div class="popup-content">
                         <span id="closePopupBtn" class="close">&times;</span>
@@ -282,7 +285,7 @@
                         <table>
                             <tr>
                                 <th id="left"><i class="fa-brands fa-discord fa-xl"></th>
-                                <th id="right">spylab *</th>
+                                <th id="right"><a href="https://discord.gg/UNj4JeYrya" target="_blank">THBOT Top-Up</a>*</th>
                             </tr>
                             <tr>
                                 <th id="left"><i class="fa-brands fa-facebook fa-xl"></th>
@@ -306,6 +309,8 @@
                         </style>
                     </div>
                 </div>
+                -->
+                
                 <!--Ads End-->
 
                 <h2>Jing Jok Spa</h2>
