--- a/Jing_Jok_Spa.html
+++ b/Jing_Jok_Spa.html
@@ -6,7 +6,7 @@
     <meta name="google-adsense-account" content="ca-pub-6552505597075020">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R3K - PisitPedia</title>
+    <title>Jing Jok Spa - PisitPedia</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/scrollbar.css">
