edit main title + update logo

--- a/Jing_Jok_Spa.html
+++ b/Jing_Jok_Spa.html
@@ -314,7 +314,7 @@
                 <!--Ads End-->
 
                 <h2>Jing Jok Spa</h2>
-                <img src="pic/MSxJJJJ-White.webp" alt="MS x JJJJ Logo">
+                <img src="pic/Jingjog_Spa.webp" alt="MS x JJJJ Logo">
                 <h2>Team Information</h2>
                 <div class="information">
                     <table>
