--- a/Players.html
+++ b/Players.html
@@ -47,7 +47,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th><a href="r3k.html">R3K</a></th>
+                            <th><img src="pic/hongkong-flag.webp" class="information-icon"><a href="r3k.html">R3K</a></th>
                             <th><a href="https://liquipedia.net/overwatch/Category:Hong_Kong" target="_blank">Hong Kong</a></th>
                             <th>
                                 <a href="https://www.instagram.com/leeys5116/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
@@ -57,12 +57,12 @@
                             </th>
                         </tr>
                         <tr>
-                            <th><a href="https://liquipedia.net/overwatch/RiLyn" target="_blank">RiLyn</a></th>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon"><a href="https://liquipedia.net/overwatch/RiLyn" target="_blank">RiLyn</a></th>
                             <th><a href="Jing_Jok_Spa.html">Jing Jok Spa</a></th>
                             <th><a href="https://www.twitch.tv/rilyn_ow" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a></th>
                         </tr>
                         <tr>
-                            <th>GreenoxZ</th>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon">GreenoxZ</th>
                             <th><a href="Jing_Jok_Spa.html">Jing Jok Spa</a></th>
                             <th><a href="https://www.twitch.tv/pisitz" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a></th>
                         </tr>
