--- a/Jing_Jok_Spa.html
+++ b/Jing_Jok_Spa.html
@@ -97,7 +97,7 @@
                             <th>2024-05-22</th>
                         </tr>
                         <tr>
-                            <th><img src="pic/36px-Th_hd.png" class="information-icon"><a href="https://liquipedia.net/overwatch/RiLyn" target="_blank">RiLyn</a></th>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon"><a href="rilyn.html">RiLyn</a></th>
                             <th>Support</th>
                             <th>2024-05-25</th>
                         </tr>
@@ -242,7 +242,7 @@
                         <tr>
                             <th>2024-03-31</th>
                             <th>5th-12th</th>
-                            <th>B-Tier</th>
+                            <th>C-Tier</th>
                             <th><a href="https://challonge.com/th/SHARKCUP2" target="_blank" class="tournament-link">
                                 <img src="pic/teeta_shark_cup.webp" class="team-logo">Teetawat Shark Cup By CTRLG SS2</a></th>
                             <th>0 : 2</th>
@@ -251,7 +251,7 @@
                         <tr>
                             <th>2024-03-31</th>
                             <th>13th-16th</th>
-                            <th>B-Tier</th>
+                            <th>C-Tier</th>
                             <th><a href="https://challonge.com/th/c63xrlr6" target="_blank" class="tournament-link">
                                 <img src="pic/teeta-chat-cup-1.webp" class="team-logo">Teetawat Chat Cup Season 1</a></th>
                             <th>0 : 2</th>
