--- a/Players.html
+++ b/Players.html
@@ -57,7 +57,7 @@
                             </th>
                         </tr>
                         <tr>
-                            <th><img src="pic/36px-Th_hd.png" class="information-icon"><a href="https://liquipedia.net/overwatch/RiLyn" target="_blank">RiLyn</a></th>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon"><a href="rilyn.html">RiLyn</a></th>
                             <th><a href="Jing_Jok_Spa.html">Jing Jok Spa</a></th>
                             <th><a href="https://www.twitch.tv/rilyn_ow" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a></th>
                         </tr>
