--- a/r3k.html
+++ b/r3k.html
@@ -73,7 +73,7 @@
                     <tr>
                         <th>2024-03-21</th>
                         <th>13th-16th</th>
-                        <th>SSS-Tier</th>
+                        <th>C-Tier</th>
                         <th><a href="https://challonge.com/th/c63xrlr6" target="_blank" class="tournament-link"><img src="pic/teeta-chat-cup-1.webp" class="team-logo">Teetawat Chat Cup Season 1</a></th>
                         <th><a href="jing-jok-jing-jang.html" target="_blank"><img src="pic/jjjj-logo.webp" alt="Jing Jok Jing Jang จิ้งจกจริงจัง" title="Jing Jok Jing Jang จิ้งจกจริงจัง" class="team-logo"></a></th>
                         <th>0 : 2</th>
