--- a/Players.html
+++ b/Players.html
@@ -50,10 +50,8 @@
                             <th><img src="pic/hongkong-flag.webp" class="information-icon"><a href="r3k.html">R3K</a></th>
                             <th><a href="https://liquipedia.net/overwatch/Category:Hong_Kong" target="_blank">Hong Kong</a></th>
                             <th>
-                                <a href="https://www.instagram.com/leeys5116/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
                                 <a href="https://x.com/IssacLee5116" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
                                 <a href="https://www.twitch.tv/r3k_hk" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a>
-                                <a href="https://www.youtube.com/channel/UCGhRgZZFR34AEyxYa6d-Mpg" target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a>
                             </th>
                         </tr>
                         <tr>
@@ -64,7 +62,25 @@
                         <tr>
                             <th><img src="pic/36px-Th_hd.png" class="information-icon">GreenoxZ</th>
                             <th><a href="Jing_Jok_Spa.html">Jing Jok Spa</a></th>
-                            <th><a href="https://www.twitch.tv/pisitz" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a></th>
+                            <th>
+                                <a href="https://www.instagram.com/ppknr/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.twitch.tv/pisitz" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th><a href="https://liquipedia.net/overwatch/Rodtunglnw" target="_blank"><img src="pic/36px-Th_hd.png" class="information-icon">Rodtunglnw</a></th>
+                            <th>Retired</th>
+                            <th><a href="https://www.twitch.tv/rodtunglnw" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a></th>
+                        </tr>
+                        <tr>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon">APCY</th>
+                            <th><a href="Jing_Jok_Spa.html">Jing Jok Spa</a></th>
+                            <th><a href="https://www.twitch.tv/seatali" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a></th>
+                        </tr>
+                        <tr>
+                            <th><a href="https://liquipedia.net/overwatch/Teetawat" target="_blank"><img src="pic/36px-Th_hd.png" class="information-icon">Teetawat</a></th>
+                            <th>Retired</th>
+                            <th><a href="https://www.twitch.tv/teetawatv3" target="_blank" rel="noopener"><i class="fa-brands fa-twitch"></i></a></th>
                         </tr>
                     </tbody>
                 </table>
