--- a/Jing_Jok_Spa.html
+++ b/Jing_Jok_Spa.html
@@ -38,9 +38,9 @@
 
             <!--ซ้ายจอ-->
             <div class="main-content">
-                <h>JING JOK SPA</h>
+                <h>จิ้งจกสปา</h>
                 <h1>Overview</h1>
-                <p>Jing Jok Spa (Formerly name as: จิ้งจกจริงจัง, มูจิสปา x จิ้งจกจริงจัง) is a Southeast Asia Overwatch team. Main sponsor by <a href="https://www.twitch.tv/leejaeklao_zz" target="_blank">ลีแจกเกี๊ยว</a></p>
+                <p>Jing Jok Spa (Formerly name as: มูจิสปา x จิ้งจกจริงจัง) is a Southeast Asia Overwatch team. Main sponsor by <a href="https://www.twitch.tv/leejaeklao_zz" target="_blank">ลีแจกเกี๊ยว</a></p>
 
                 <h1>Player Roster</h1>
 
@@ -250,7 +250,7 @@
                             <th><a href="https://challonge.com/th/SHARKCUP2" target="_blank" class="tournament-link">
                                 <img src="pic/teeta_shark_cup.webp" class="team-logo">Teetawat Shark Cup By CTRLG SS2</a></th>
                             <th>0 : 2</th>
-                            <th>฿700</th>
+                            <th>$19.26</th>
                         </tr>
                         <tr>
                             <th>2024-03-31</th>
@@ -326,15 +326,19 @@
                 
                 <!--Ads End-->
 
-                <h2>Jing Jok Spa</h2>
-                <img src="pic/Jingjog_Spa.webp" alt="MS x JJJJ Logo">
+                <h2>จิ้งจกสปา</h2>
+                <img src="pic/Jingjog_Spa.webp" alt="Jing Jok Spa LOGO">
                 <h2>Team Information</h2>
                 <div class="information">
                     <table>
                         <tbody>
                             <tr>
+                                <th id="left">Romanized Name:</th>
+                                <th id="right">Jing Jok Spa</th>
+                            </tr>
+                            <tr>
                                 <th id="left">Location:</th>
-                                <th id="right">Thailand</th>
+                                <th id="right"><img src="pic/36px-Th_hd.png" class="information-icon">Thailand</th>
                             </tr>
                             <tr>
                                 <th id="left">Region:</th>
@@ -342,7 +346,7 @@
                             </tr>
                             <tr>
                                 <th id="left">Approx. Total Winnings:</th>
-                                <th id="right">฿700</th>
+                                <th id="right">$19.26</th>
                             </tr>
                         </tbody>
                     </table>
