--- a/Teetawat_Shark_Cup.html
+++ b/Teetawat_Shark_Cup.html
@@ -37,13 +37,15 @@
         <div class="shark-content">
             <img src="pic/teeta_shark_cup.webp" class="shark-logo">
             <h1>
-                TEETAWAT SHARK CUP BY CTRL-G
+                Teetawat Shark Cup By CTRLG SS3
             </h1>
-            <h3>
-                Season 3
-            </h3>
+            <div >
+                <h2 id="date-tour">
+                    เปิดรับสมัครแล้ว วันนี้ - 28 มิถุนายน 2024
+                </h2>
+            </div>
             <div class="content-button">
-                <a href="#">Coming Soon !</a>
+                <a href="https://ctrlg.gg/tournaments/105" target="_blank">สมัครเลย</a>
             </div>
             <h2>ติดตามข่าวสารได้ที่</h2>
             <div class="content-button">
