--- a/Jing_Jok_Spa.html
+++ b/Jing_Jok_Spa.html
@@ -92,11 +92,6 @@
                             <th>2024-05-07</th>
                         </tr>
                         <tr>
-                            <th><img src="pic/36px-Th_hd.png" class="information-icon">moiranoob</th>
-                            <th></th>
-                            <th>2024-05-07</th>
-                        </tr>
-                        <tr>
                             <th><img src="pic/36px-Th_hd.png" class="information-icon">Rain</th>
                             <th>DPS</th>
                             <th>2024-05-22</th>
@@ -105,6 +100,16 @@
                             <th><img src="pic/36px-Th_hd.png" class="information-icon"><a href="rilyn.html">RiLyn</a></th>
                             <th>Support</th>
                             <th>2024-05-25</th>
+                        </tr>
+                        <tr>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon">Jamiemami</th>
+                            <th>Support</th>
+                            <th>2024-06-21</th>
+                        </tr>
+                        <tr>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon">ZerDust</th>
+                            <th>Flex</th>
+                            <th>2024-06-22</th>
                         </tr>
                     </tbody>
                 </table>
