--- a/Jing_Jok_Spa.html
+++ b/Jing_Jok_Spa.html
@@ -97,6 +97,21 @@
                             <th>2024-05-22</th>
                         </tr>
                         <tr>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon">TNSIIX</th>
+                            <th>Flex</th>
+                            <th>2024-05-XX</th>
+                        </tr>
+                        <tr>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon">mainajaaaaaa</th>
+                            <th>DPS</th>
+                            <th>2024-05-XX</th>
+                        </tr>
+                        <tr>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon">Wasp</th>
+                            <th>Support</th>
+                            <th>2024-05-XX</th>
+                        </tr>
+                        <tr>
                             <th><img src="pic/36px-Th_hd.png" class="information-icon"><a href="rilyn.html">RiLyn</a></th>
                             <th>Support</th>
                             <th>2024-05-25</th>
@@ -105,6 +120,11 @@
                             <th><img src="pic/36px-Th_hd.png" class="information-icon">Jamiemami</th>
                             <th>Support</th>
                             <th>2024-06-21</th>
+                        </tr>
+                        <tr>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon">Twinylittle</th>
+                            <th>Flex</th>
+                            <th>2024-06-XX</th>
                         </tr>
                         <tr>
                             <th><img src="pic/36px-Th_hd.png" class="information-icon">ZerDust</th>
