--- a/Jing_Jok_Spa.html
+++ b/Jing_Jok_Spa.html
@@ -301,7 +301,8 @@
                 <h1>Gallery</h1>
                 <div class="main-content-img">
                     <img src="pic/jjjj-logo.webp" height="300px" width="auto">
-                    <img src="pic/jjjjcheers.webp" height="300px" width="auto">
+                    <img src="pic/จิ้งจกสปาตาร์2.png" height="300px" width="auto">
+                    <img src="pic/จิ้งจกสเปน.png" height="300px" width="auto">
                 </div>
 
 
@@ -352,7 +353,7 @@
                 <!--Ads End-->
 
                 <h2>จิ้งจกสปา</h2>
-                <img src="pic/Jingjog_Spa.webp" alt="Jing Jok Spa LOGO">
+                <img src="pic/จิ้งจกสปา2.png" alt="Jing Jok Spa LOGO">
                 <h2>Team Information</h2>
                 <div class="information">
                     <table>
