--- a/Jing_Jok_Spa.html
+++ b/Jing_Jok_Spa.html
@@ -300,9 +300,9 @@
 
                 <h1>Gallery</h1>
                 <div class="main-content-img">
-                    <img src="pic/jjjj-logo.webp" height="300px" width="auto">
-                    <img src="pic/จิ้งจกสปาตาร์2.png" height="300px" width="auto">
-                    <img src="pic/จิ้งจกสเปน.png" height="300px" width="auto">
+                    <img src="pic/jjjj-logo.webp" title="จิ้งจกจริงจัง" height="300px" width="auto">
+                    <img src="pic/จิ้งจกสปาตาร์2.png" title="จิ้งจกสปาตาร์" height="300px" width="auto">
+                    <img src="pic/จิ้งจกสเปน.png" title="จิ้งจกสเปน" height="300px" width="auto">
                 </div>
 
 
