--- a/Jing_Jok_Spa.html
+++ b/Jing_Jok_Spa.html
@@ -157,8 +157,46 @@
                 </table>
 
                 <h1>Former</h1>
+                
+                <div class="former">
 
                 <table>
+                    <h2>2023</h2>
+
+                    <thead>
+                        <tr>
+                            <th colspan="6">Former Squad</th>
+                        </tr>
+                        <tr>
+                            <th>ID:</th>
+                            <th>Position:</th>
+                            <th>Join Date:</th>
+                            <th>Leave Date:</th>
+                            <th>New Team:</th>
+                        </tr>
+                    </thead>
+                        <tr>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon">NongNing</th>
+                            <th>Support</th>
+                            <th>2022-??-??</th>
+                            <th>2023-??-??</th>
+                            <th>Retired</th>
+                        </tr>
+                        <tr>
+                            <th><img src="pic/36px-Th_hd.png" class="information-icon">ZunshineX</th>
+                            <th>DPS</th>
+                            <th>2022-??-??</th>
+                            <th>2023-??-??</th>
+                            <th>Retired</th>
+                        </tr>
+                    </tbody>
+
+                </table>
+
+                <table>
+
+                    <h2>2024</h2>
+
                     <thead>
                         <tr>
                             <th colspan="6">Former Squad</th>
@@ -200,22 +238,10 @@
                             <th>2024-03-31</th>
                             <th>Retired</th>
                         </tr>
-                        <tr>
-                            <th><img src="pic/36px-Th_hd.png" class="information-icon">NongNing</th>
-                            <th>Support</th>
-                            <th>2022-??-??</th>
-                            <th>2023-??-??</th>
-                            <th>Retired</th>
-                        </tr>
-                        <tr>
-                            <th><img src="pic/36px-Th_hd.png" class="information-icon">ZunshineX</th>
-                            <th>DPS</th>
-                            <th>2022-??-??</th>
-                            <th>2023-??-??</th>
-                            <th>Retired</th>
-                        </tr>
                     </tbody>
+
                 </table>
+                </div>
 
                 <h1>Organization</h1>
                 <h2>Active</h2>
